# civicFlow

./: pyproject.toml  server.py
src/codex/: config.py  sessao.py
src/data/config/: database.py
src/data/models/: polling.py
src/database/config/: connect.py
src/database/repository/: mov_repository.py
src/routers/: monitor_router.py  mov.py
src/services/: monitor_service.py
